Desenhando grid e movendo agente a partir do teclado

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="food.js"></script>
   <script src="world.js"></script>
   <script src="sketch.js"></script>
+  <script src="agent.js"></script>
 </body>
 
 </html>
