--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 </head>
 
 <body>
-  <script src="bloop.js"></script>
-  <script src="dna.js"></script>
-  <script src="food.js"></script>
-  <script src="world.js"></script>
   <script src="sketch.js"></script>
+  <script src="world.js"></script>
+  <script src="terrain.js"></script>
   <script src="agent.js"></script>
+  <script src="food.js"></script>
 </body>
 
 </html>
